# darts-monorepo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  BUILD.bazel  DESIGN.md  Dockerfile  MODULE.bazel  WORKSPACE  alembic.ini  main.py  pyproject.toml  script.py  tree.txt
.github/workflows/: backend-ci.yml  deploy.yml
api/: main.py  pyproject.toml
api/routers/: scores.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/api/: main.py  pyproject.toml
backend/app/: constants.py  database.py  game_logic.py  main.py  models.py  schemas.py
backend/app/games/: around_the_world.py
backend/app/routers/: __init__.py  games.py  scores.py
backend/app/utils/: scoring.py
backend/darts/: BUILD.bazel  main.py  pyproject.toml
backend/darts/games/: atw.py
backend/migrations/: env.py
backend/notebooks/: Untitled.ipynb  aroundtheworld.ipynb
backend/tests/: test_around_the_world.py  test_scoring.py
darts_games/: scoring.py
experimental/darts_testing/: BUILD.bazel
experimental/darts_testing/notebooks/: aroundtheworld.ipynb
frontend/: .gitignore
frontend/public/: dartboard.png.aux.xml
frontend/src/: App.jsx  dartboard.jsx
games/: countdown.py  cricket.py  pyproject.toml  scoring.py
games/src/games/: atw.py  countdown.py
games/src/games/utils/: constants.py  schemas.py  scoring.py
games/utils/: schemas.py
notebooks/: Untitled.ipynb  aroundtheworld.ipynb  test_docker_status.ipynb  testing.ipynb
projects/darts/backend/: BUILD.bazel  constants.py  pyproject.toml  schemas.py
projects/darts/backend/routers/: games.py
projects/darts/frontend/: .gitignore  package.json
python/: BUILD.bazel  pytest.ini  requirements.txt  rules.bzl
rules/format/: BUILD.bazel
rules/lint/: linters.bzl
sh/: bazel_build_version_check.sh  build_jupyter.sh  make_env.sh  test_dependency.sh  write_ci_cfg_options.sh
