"darts-monorepo"

module(name = "darts-monorepo")

PYTHON_VERSION = "3.12"

bazel_dep(name = "aspect_rules_py", version = "1.0.0-rc0")

bazel_dep(name = "rules_python", version = "0.37.1", dev_dependency = True)

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
)
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)

bazel_dep(name = "rules_uv", version = "0.34.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = PYTHON_VERSION,
    requirements_lock = "//python:requirements.txt.lock",
)
use_repo(pip, "pip")

bazel_dep(name = "aspect_bazel_lib", version = "2.9.3")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "aspect_rules_lint", version = "1.0.2")
bazel_dep(name = "rules_oci", version = "2.0.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# IMAGES


oci.pull(
    name = "python_base",
    digest = "sha256:fd304df3579ddb2df079c560619d7fdba78ffb56bad7d61aa0a6e36ee1a2d0db",
    image = "python",
)


use_repo(oci, "python_base")
