[project]
name = "darts-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "games",
    "jupyterlab>=4.3.5",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
]

[tool.uv.sources]
games = { workspace = true }

[tool.uv.workspace]
members = ["games"]
